Removed "Reset all" confirmation dialog
Water tab: Made control panel controls bold
Made "Reset all" button bold
Water tab: Fixed: 'sugar highlight' unchecked is the bright yellow
Macro tab: Constrain the conductivity tester from leaving the play area
# 0.00.127 (57290) Oct 5, 2011
# 0.00.126 (57286) Oct 5, 2011
Water tab: Fixed color for oxygen in JMol view to match the color used in the sucrose in the play area
Prevent shakers from being dragged too far past the left edge of the beaker
Made "Reset all" button non-bold to re-use common code for reset all buttons
Micro tab: Rewrote crystal growth to use boolean flags instead of BondingFailure exception
Micro tab: Made periodic table non-resizable
Water tab: Renamed "sugar atoms" to "sugar highlight"
Made the light rays more visible when in "white background" mode
Rename elements to elementAtomicMasses, to correspond to getter, see #3090
Renamed playButtonPressed field to clockRunning, see #3090
Renamed projectorMode field to whiteBackground to match up with the menu item name, see #3090
# 0.00.125 (57089) Sep 30, 2011
Fixed the title in the window title bar for wet lab sims
# 0.00.124 (57087) Sep 30, 2011
Renamed Sugar and Salt Solutions: Macro (instead of Macroscopic)
Renamed Sugar and Salt Solutions: Micro (instead of Basics)
# 0.00.123 (57085) Sep 30, 2011
Added new "Sugar and Salt Solutions: Basics" sim for temporary use in Fall 2011 wet lab at CU
Added new "Sugar and Salt Solutions: Macroscopic" sim for temporary use in Fall 2011 wet lab at CU
# 0.00.122 (57027) Sep 29, 2011
Trial version for testing
# 0.00.121 (57015) Sep 28, 2011
# 0.00.120 (57013) Sep 28, 2011
# 0.00.119 (56910) Sep 23, 2011
Added teacher menu with projector option, see #3087
# 0.00.118 (56838) Sep 22, 2011
Micro tab: Renamed "show in periodic table" to "periodic table"
Water tab: Removed "sugar partial charges" button
# 0.00.117 (56832) Sep 22, 2011
Water tab: Increased the bucket label font
Water tab: Made the yellow dashed lines thicker